# sgmaketest

./: CMakeLists.txt
CMakeModules/: CheckCXXFeatures.cmake
simgear/: CMakeLists.txt
simgear/package/: CMakeLists.txt
